// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should render correctly 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c4 > svg {
  fill: #545456;
  width: 20px;
  height: 20px;
  cursor: pointer;
}

.c4 > svg:hover {
  fill: #757679;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  background-color: #FFF;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 52px;
  background-color: #FFCA00;
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <SearchBar>
    <styled.div>
      <div
        className="c0"
      >
        <Styled(Input)>
          <Input
            className="c1"
            disabled={false}
            type="text"
            width="100%"
          >
            <styled.input
              className="c1"
              disabled={false}
              type="text"
              width="100%"
            >
              <input
                className="c1 c2"
                disabled={false}
                type="text"
                width="100%"
              />
            </styled.input>
          </Input>
        </Styled(Input)>
        <styled.div>
          <div
            className="c3"
          >
            <Icon
              name="searchFilled"
              selectable={true}
              size="20px"
            >
              <styled.div
                selectable={true}
                size="20px"
              >
                <div
                  className="c4"
                  size="20px"
                >
                  <searchFilled
                    height="32"
                    viewBox="0 0 32 32"
                    width="32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      height="32"
                      viewBox="0 0 32 32"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        search-filled
                      </title>
                      <path
                        d="M14.856.104a12.34 12.34 0 0 0-1.559-.095c-7.069 0-12.8 5.731-12.8 12.8s5.731 12.8 12.8 12.8c2.513 0 4.858-.724 6.835-1.976l-.052.031 7.672 7.672c.41.409.975.662 1.6.662s1.19-.253 1.6-.662c.409-.41.662-.975.662-1.6s-.253-1.19-.662-1.6l-7.544-7.528a12.659 12.659 0 0 0 2.648-7.777c0-.55-.035-1.091-.102-1.623l.007.063C25.213 5.45 20.669.884 14.923.11l-.066-.007zm-1.64 2.92c5.421 0 9.816 4.395 9.816 9.816s-4.395 9.816-9.816 9.816c-5.421 0-9.816-4.395-9.816-9.816v-.042.002c.014-5.402 4.396-9.776 9.8-9.776h.017-.001z"
                      />
                    </svg>
                  </searchFilled>
                </div>
              </styled.div>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBar>
</ThemeProvider>
`;

exports[`SearchBar should render correctly with onChange 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c4 > svg {
  fill: #545456;
  width: 20px;
  height: 20px;
  cursor: pointer;
}

.c4 > svg:hover {
  fill: #757679;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  background-color: #FFF;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 52px;
  background-color: #FFCA00;
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <SearchBar
    onChange={[MockFunction]}
  >
    <styled.div>
      <div
        className="c0"
      >
        <Styled(Input)
          onChange={[MockFunction]}
        >
          <Input
            className="c1"
            disabled={false}
            onChange={[MockFunction]}
            type="text"
            width="100%"
          >
            <styled.input
              className="c1"
              disabled={false}
              onChange={[MockFunction]}
              type="text"
              width="100%"
            >
              <input
                className="c1 c2"
                disabled={false}
                onChange={[MockFunction]}
                type="text"
                width="100%"
              />
            </styled.input>
          </Input>
        </Styled(Input)>
        <styled.div>
          <div
            className="c3"
          >
            <Icon
              name="searchFilled"
              selectable={true}
              size="20px"
            >
              <styled.div
                selectable={true}
                size="20px"
              >
                <div
                  className="c4"
                  size="20px"
                >
                  <searchFilled
                    height="32"
                    viewBox="0 0 32 32"
                    width="32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      height="32"
                      viewBox="0 0 32 32"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        search-filled
                      </title>
                      <path
                        d="M14.856.104a12.34 12.34 0 0 0-1.559-.095c-7.069 0-12.8 5.731-12.8 12.8s5.731 12.8 12.8 12.8c2.513 0 4.858-.724 6.835-1.976l-.052.031 7.672 7.672c.41.409.975.662 1.6.662s1.19-.253 1.6-.662c.409-.41.662-.975.662-1.6s-.253-1.19-.662-1.6l-7.544-7.528a12.659 12.659 0 0 0 2.648-7.777c0-.55-.035-1.091-.102-1.623l.007.063C25.213 5.45 20.669.884 14.923.11l-.066-.007zm-1.64 2.92c5.421 0 9.816 4.395 9.816 9.816s-4.395 9.816-9.816 9.816c-5.421 0-9.816-4.395-9.816-9.816v-.042.002c.014-5.402 4.396-9.776 9.8-9.776h.017-.001z"
                      />
                    </svg>
                  </searchFilled>
                </div>
              </styled.div>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBar>
</ThemeProvider>
`;

exports[`SearchBar should render correctly with onClick 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c4 > svg {
  fill: #545456;
  width: 20px;
  height: 20px;
  cursor: pointer;
}

.c4 > svg:hover {
  fill: #757679;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  background-color: #FFF;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 52px;
  background-color: #FFCA00;
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <SearchBar
    onClick={[MockFunction]}
  >
    <styled.div>
      <div
        className="c0"
      >
        <Styled(Input)>
          <Input
            className="c1"
            disabled={false}
            type="text"
            width="100%"
          >
            <styled.input
              className="c1"
              disabled={false}
              type="text"
              width="100%"
            >
              <input
                className="c1 c2"
                disabled={false}
                type="text"
                width="100%"
              />
            </styled.input>
          </Input>
        </Styled(Input)>
        <styled.div>
          <div
            className="c3"
          >
            <Icon
              name="searchFilled"
              onClick={[MockFunction]}
              selectable={true}
              size="20px"
            >
              <styled.div
                onClick={[MockFunction]}
                selectable={true}
                size="20px"
              >
                <div
                  className="c4"
                  onClick={[MockFunction]}
                  size="20px"
                >
                  <searchFilled
                    height="32"
                    viewBox="0 0 32 32"
                    width="32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      height="32"
                      viewBox="0 0 32 32"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        search-filled
                      </title>
                      <path
                        d="M14.856.104a12.34 12.34 0 0 0-1.559-.095c-7.069 0-12.8 5.731-12.8 12.8s5.731 12.8 12.8 12.8c2.513 0 4.858-.724 6.835-1.976l-.052.031 7.672 7.672c.41.409.975.662 1.6.662s1.19-.253 1.6-.662c.409-.41.662-.975.662-1.6s-.253-1.19-.662-1.6l-7.544-7.528a12.659 12.659 0 0 0 2.648-7.777c0-.55-.035-1.091-.102-1.623l.007.063C25.213 5.45 20.669.884 14.923.11l-.066-.007zm-1.64 2.92c5.421 0 9.816 4.395 9.816 9.816s-4.395 9.816-9.816 9.816c-5.421 0-9.816-4.395-9.816-9.816v-.042.002c.014-5.402 4.396-9.776 9.8-9.776h.017-.001z"
                      />
                    </svg>
                  </searchFilled>
                </div>
              </styled.div>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBar>
</ThemeProvider>
`;

exports[`SearchBar should render correctly with value 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c4 > svg {
  fill: #545456;
  width: 20px;
  height: 20px;
  cursor: pointer;
}

.c4 > svg:hover {
  fill: #757679;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  background-color: #FFF;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 52px;
  background-color: #FFCA00;
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <SearchBar
    onChange={[MockFunction]}
    value="My search"
  >
    <styled.div>
      <div
        className="c0"
      >
        <Styled(Input)
          onChange={[MockFunction]}
          value="My search"
        >
          <Input
            className="c1"
            disabled={false}
            onChange={[MockFunction]}
            type="text"
            value="My search"
            width="100%"
          >
            <styled.input
              className="c1"
              disabled={false}
              onChange={[MockFunction]}
              type="text"
              value="My search"
              width="100%"
            >
              <input
                className="c1 c2"
                disabled={false}
                onChange={[MockFunction]}
                type="text"
                value="My search"
                width="100%"
              />
            </styled.input>
          </Input>
        </Styled(Input)>
        <styled.div>
          <div
            className="c3"
          >
            <Icon
              name="searchFilled"
              selectable={true}
              size="20px"
            >
              <styled.div
                selectable={true}
                size="20px"
              >
                <div
                  className="c4"
                  size="20px"
                >
                  <searchFilled
                    height="32"
                    viewBox="0 0 32 32"
                    width="32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      height="32"
                      viewBox="0 0 32 32"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        search-filled
                      </title>
                      <path
                        d="M14.856.104a12.34 12.34 0 0 0-1.559-.095c-7.069 0-12.8 5.731-12.8 12.8s5.731 12.8 12.8 12.8c2.513 0 4.858-.724 6.835-1.976l-.052.031 7.672 7.672c.41.409.975.662 1.6.662s1.19-.253 1.6-.662c.409-.41.662-.975.662-1.6s-.253-1.19-.662-1.6l-7.544-7.528a12.659 12.659 0 0 0 2.648-7.777c0-.55-.035-1.091-.102-1.623l.007.063C25.213 5.45 20.669.884 14.923.11l-.066-.007zm-1.64 2.92c5.421 0 9.816 4.395 9.816 9.816s-4.395 9.816-9.816 9.816c-5.421 0-9.816-4.395-9.816-9.816v-.042.002c.014-5.402 4.396-9.776 9.8-9.776h.017-.001z"
                      />
                    </svg>
                  </searchFilled>
                </div>
              </styled.div>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBar>
</ThemeProvider>
`;
